// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When registering, deactivating, and reactivating a user As a super admin again should reactivate the user 1`] = `
Object {
  "reactivateUser": Object {
    "user": Object {
      "active": true,
      "firstName": "New",
      "lastName": "User",
    },
  },
}
`;

exports[`When registering, deactivating, and reactivating a user As the new user should fail to get the correct current user 1`] = `[Error: Invalid status code: 403]`;

exports[`When registering, deactivating, and reactivating a user As the new user should get the correct current user 1`] = `"New"`;

exports[`When registering, deactivating, and reactivating a user As the reactivated user should get the correct current user 1`] = `
Object {
  "currentUser": Object {
    "firstName": "New",
    "lastName": "User",
  },
}
`;
